tests/int/snapshots/integration__int__use_command__module_logger_flags_r_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - logger
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CrawkArgs

----- stderr -----
