tests/int/snapshots/integration__int__use_command__module_main_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CrawkArgs
crawk::version
crawk::{AnalysisOptions, Analyzer, TypeReference, version}

----- stderr -----
