tests/int/snapshots/integration__int__use_command__module_main_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crawk::AnalysisOptions
crawk::Analyzer
crawk::TypeReference
crawk::version

----- stderr -----
