tests/int/snapshots/integration__int__use_command__module_module.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - module
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
